--- a/Source/Puan.Infra.CrawlerOncid/Puan.Infra.CrawlerOncid.csproj
+++ b/Source/Puan.Infra.CrawlerOncid/Puan.Infra.CrawlerOncid.csproj
@@ -1,12 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Notifications\" />
+    <ProjectReference Include="..\Puan.Business\Puan.Business.csproj" />
   </ItemGroup>
 
 </Project>
