Config injecao de depedencia; MarkPoint funcionando.

--- a/Source/Puan.API/Puan.API.csproj
+++ b/Source/Puan.API/Puan.API.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Puan.Business\Puan.Business.csproj" />
+    <ProjectReference Include="..\Puan.Infra.CrawlerOncid\Puan.Infra.CrawlerOncid.csproj" />
   </ItemGroup>
 
 </Project>
