--- a/Source/Puan.Infra.CrawlerOncid/Puan.Infra.CrawlerOncid.csproj
+++ b/Source/Puan.Infra.CrawlerOncid/Puan.Infra.CrawlerOncid.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Puan.Business\Puan.Business.csproj" />
   </ItemGroup>
 
