--- a/Source/Puan.API/appsettings.Development.json
+++ b/Source/Puan.API/appsettings.Development.json
@@ -1,9 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "DataBase": {
+    "DataSource": "(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Felipe\\PuanDataBase.mdf",
+    "InitialCatalog": "C:\\USERS\\FELIPE\\PUANDATABASE.MDF",
+    "UserId": "felipelima",
+    "Password": "felipe"
   }
 }
